refactor: 试试java18的高级switch